Conversor de monedas (Lab 2, Computo 1)

--- a/fundamentos_de_phyton.ipynb
+++ b/fundamentos_de_phyton.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO6d9Skf3XiUNkGgzH4dhuT",
+      "authorship_tag": "ABX9TyMiEvCt5mFkRuVG+ZK16T4D",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "s52sVGCvuehm",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "bd8d560e-e52d-4654-f0a1-b3900bbd6329"
+        "outputId": "3fdd2587-c530-4ee3-8468-0928680ec57c"
       },
       "outputs": [
         {
@@ -72,12 +72,12 @@
       ],
       "metadata": {
         "id": "lsr1ffD_xFeQ",
-        "outputId": "6d2e50d8-02ca-457b-f189-2795f76c41d7",
+        "outputId": "1a2dcab1-cac3-44a1-baed-3165bc54d012",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -111,22 +111,22 @@
       ],
       "metadata": {
         "id": "R3dzCu9J3yZf",
-        "outputId": "924716d2-7aae-4946-909b-f4351e907a6b",
+        "outputId": "49431e65-e0a4-4bc5-c136-ed017a206922",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Num 1\n",
-            "10\n",
+            "5\n",
             "Num 2\n",
-            "15\n",
-            "La suma es:  25.0\n"
+            "9\n",
+            "La suma es:  14.0\n"
           ]
         }
       ]
@@ -147,12 +147,12 @@
       ],
       "metadata": {
         "id": "jzBDryFZ4d3i",
-        "outputId": "9c069965-d53b-44fe-c37f-172206cb3892",
+        "outputId": "2a502ccc-6fe6-4648-c01f-8c56c8fb9811",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -185,19 +185,19 @@
       ],
       "metadata": {
         "id": "ZXq3mYNN5lqm",
-        "outputId": "31d90df9-f66f-4087-959c-ebb324e2b8cc",
+        "outputId": "360acbf8-d801-4968-d6bc-d77112102d8d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Ingrese un numero:10\n",
-            "El numero es par 10\n"
+            "Ingrese un numero:9\n",
+            "El numero es impar\n"
           ]
         }
       ]
@@ -220,7 +220,7 @@
       "metadata": {
         "id": "sQ_QPk0_rzTm"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -234,20 +234,20 @@
       ],
       "metadata": {
         "id": "wciHbjy1r-Sb",
-        "outputId": "81afdf22-ec90-4fe1-e8df-8837d5e55aa0",
+        "outputId": "1ef37c29-fe77-4c4f-d1d2-e994ce11f68e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Num 1:  10\n",
-            "Num 2:  15\n",
-            "La suma es:  25.0\n"
+            "Num 1:  8\n",
+            "Num 2:  9\n",
+            "La suma es:  17.0\n"
           ]
         }
       ]
@@ -270,7 +270,7 @@
       "metadata": {
         "id": "6Xho5CESuClt"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -281,19 +281,19 @@
       ],
       "metadata": {
         "id": "zCyDJiE2uGO2",
-        "outputId": "e50d9832-c975-4837-a568-a035c00c561e",
+        "outputId": "74881289-e53d-4d1c-f651-f5d9171da23f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Celsius: 30\n",
-            "F:  86.0\n"
+            "Celsius: 35\n",
+            "F:  95.0\n"
           ]
         }
       ]
@@ -318,7 +318,7 @@
       "metadata": {
         "id": "ZPuDjhhkuRAr"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -329,19 +329,19 @@
       ],
       "metadata": {
         "id": "MfL3pksWuUTv",
-        "outputId": "5f899ffd-6a8b-4371-e518-c503495c5562",
+        "outputId": "fbd7d02d-ad73-4f91-8505-cb8f587c4711",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Num: 12\n",
-            "EL numero  12  es:  par\n"
+            "Num: 5\n",
+            "EL numero  5  es:  impar\n"
           ]
         }
       ]
@@ -367,7 +367,7 @@
       "metadata": {
         "id": "gfWGvSdWujuZ"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -380,20 +380,20 @@
       ],
       "metadata": {
         "id": "6yXcQD7aunT2",
-        "outputId": "de2b590a-2a89-4030-8084-c2ca7be77ba6",
+        "outputId": "224b81df-151d-48d6-b208-ae18a7eaf2f4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Horas: 8\n",
-            "Valor: 1.5\n",
-            "Sueldo:  360.0\n"
+            "Horas: 5\n",
+            "Valor: 10\n",
+            "Sueldo:  1500.0\n"
           ]
         }
       ]
@@ -418,19 +418,19 @@
       ],
       "metadata": {
         "id": "eeF9ECwKu62z",
-        "outputId": "9ed4171e-3674-4eb7-cf54-18c35dbea927",
+        "outputId": "7111788c-599b-444a-c5de-1979b207c922",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Introduce la temperatura en grados Fahrenheit: 86\n",
-            "Celsius:  30.0\n"
+            "Introduce la temperatura en grados Fahrenheit: 75\n",
+            "Celsius:  23.88888888888889\n"
           ]
         }
       ]
@@ -477,12 +477,12 @@
       ],
       "metadata": {
         "id": "MCcQHg8vxN3C",
-        "outputId": "6afa59ea-faf2-4422-b1d6-1799c1593886",
+        "outputId": "a5b4e13f-3ed2-4874-918b-c1c0f51d094d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -492,9 +492,9 @@
             "Seleccione la temperatura a convertir:\n",
             "1. Celsius\n",
             "2. Fahrenheit\n",
-            "Ingrese 1 o 2: 2\n",
-            "Ingrese la temperatura en grados Fahrenheit: 75\n",
-            "75.0 grados Fahrenheit son 298.15 Kelvin\n"
+            "Ingrese 1 o 2: 1\n",
+            "Ingrese la temperatura en grados Celsius: 25\n",
+            "25.0 grados Celsius son 308.15 Kelvin\n"
           ]
         }
       ]
@@ -517,7 +517,7 @@
       "metadata": {
         "id": "j1uwlZnb6ClF"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -528,19 +528,19 @@
       ],
       "metadata": {
         "id": "2hyMbMYx6NYB",
-        "outputId": "cf899f5c-1009-4e82-ad73-0c1c80ec7712",
+        "outputId": "9de17bb6-3a25-4d73-92e9-18e01b442c7f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Num: 5\n",
-            "Cuadrado:  25\n"
+            "Num: 4\n",
+            "Cuadrado:  16\n"
           ]
         }
       ]
@@ -562,7 +562,7 @@
       "metadata": {
         "id": "tNjUqPdR7-BF"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -573,19 +573,19 @@
       ],
       "metadata": {
         "id": "GZ4mbFTJ81PB",
-        "outputId": "7cb77c2c-aefd-4900-889a-b2e17e3217de",
+        "outputId": "e1da3985-9c5b-4057-c614-d9ac710058b0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Num: 3\n",
-            "Cuadrado:  9\n"
+            "Num: 5\n",
+            "Cuadrado:  25\n"
           ]
         }
       ]
@@ -652,12 +652,12 @@
       ],
       "metadata": {
         "id": "VUPFipVEC-Lx",
-        "outputId": "59bf76cc-2836-45da-e41f-f38582d58926",
+        "outputId": "5c1036b2-9517-47db-89a8-2190e88bc655",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -694,12 +694,12 @@
       ],
       "metadata": {
         "id": "dRJYYjNDcB_W",
-        "outputId": "fce10946-fb59-466f-9ff8-109fc5b0b1b7",
+        "outputId": "39ae5ef3-9e6b-47e1-b802-d1051eff3c87",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -719,19 +719,19 @@
       ],
       "metadata": {
         "id": "ZVMOFQAGci5A",
-        "outputId": "77aed347-7e23-4bdb-d28b-6113d6138e7f",
+        "outputId": "5b7668cf-f86b-471d-c397-db27eeb70a5d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Tabla 5\n",
-            "[5, 10, 15, 20, 25, 30, 35, 40, 45, 50]\n"
+            "Tabla 4\n",
+            "[4, 8, 12, 16, 20, 24, 28, 32, 36, 40]\n"
           ]
         }
       ]
@@ -754,12 +754,12 @@
       ],
       "metadata": {
         "id": "j44WJwCmdHQs",
-        "outputId": "2bab5097-b8ca-4f8b-c5f0-f9a8f6a79dc4",
+        "outputId": "a98ab223-7aa1-4b45-d687-b7ab32078820",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -780,12 +780,12 @@
       ],
       "metadata": {
         "id": "Pz71nMordtlo",
-        "outputId": "4b587bab-dc21-4420-8b41-b941cdeb4481",
+        "outputId": "d57ffefe-e1c1-43ec-c6a8-703889dc8494",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -815,12 +815,12 @@
       ],
       "metadata": {
         "id": "lN4kdi_RefGF",
-        "outputId": "391f125f-14ea-47a3-b9db-2057ccc9ce13",
+        "outputId": "8b10868a-3f54-4c08-fe68-320b0e19f468",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -840,12 +840,12 @@
       ],
       "metadata": {
         "id": "NMwxk5TvfFfQ",
-        "outputId": "c03b8fad-9895-4ac2-8f98-663b4046866a",
+        "outputId": "f04576bf-81bf-4c2d-cbad-f2a6e286e818",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -875,12 +875,12 @@
       ],
       "metadata": {
         "id": "HGKfbfUYgwhQ",
-        "outputId": "7247dc32-46f2-4016-9e89-01036aaf3281",
+        "outputId": "24df2c7a-9e92-4e3d-bb3b-ef9e2dd86f40",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -899,12 +899,12 @@
       ],
       "metadata": {
         "id": "6ouXiqr_hrJr",
-        "outputId": "d814b842-f189-4fe8-e77e-eeeb3d2617a9",
+        "outputId": "5cb15eea-fbb3-49e3-c7d6-c60da4c0cfff",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -932,18 +932,18 @@
       ],
       "metadata": {
         "id": "ByucT2JpipFK",
-        "outputId": "4512123d-4fdb-4ff2-8750-a8881055bf68",
+        "outputId": "8463b022-dc88-4881-e518-558e2074c0ac",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 24,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Fecha:  lunes 29  de  agosto  del  2024\n"
+            "Fecha:  sabado 3  de  septiembre  del  2024\n"
           ]
         }
       ]
@@ -960,12 +960,12 @@
       ],
       "metadata": {
         "id": "-ueEMK7WlgKB",
-        "outputId": "35cd7fa9-fd49-47bc-bb5c-b5575dadfe5c",
+        "outputId": "7a846ffd-cba5-4c4e-84ca-2a868f29ef12",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 25,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
@@ -984,12 +984,12 @@
       ],
       "metadata": {
         "id": "Tzg81lQ7l_rS",
-        "outputId": "9dfca330-ddbd-4a53-b807-bd9b462dd405",
+        "outputId": "8d90d22c-f487-4198-845b-0b621e647f4d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 26,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
@@ -1009,7 +1009,7 @@
       "metadata": {
         "id": "KkPZaxRjmwp-"
       },
-      "execution_count": 35,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -1020,12 +1020,12 @@
       ],
       "metadata": {
         "id": "n3LofZGjmNKE",
-        "outputId": "03f204fc-eaf6-4030-adc5-dfe1278b06df",
+        "outputId": "d84b5b28-b4f7-461d-bc0b-439c12fb5404",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 36,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1035,7 +1035,94 @@
             ]
           },
           "metadata": {},
-          "execution_count": 36
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "LABORATORIO 2"
+      ],
+      "metadata": {
+        "id": "oAb-V58nbE_G"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        " - Conversor de monedas"
+      ],
+      "metadata": {
+        "id": "WbPSTI9EPzlY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tasas_de_cambio = {\n",
+        "    \"DOLAR\": 1.0,        # Dólar estadounidense\n",
+        "    \"EURO\": 0.92,       # Euro\n",
+        "    \"LEMPIRA\": 24.53,      # Lempira\n",
+        "    \"PESO MEXICANO\": 19.18,      # Peso mexicano\n",
+        "    \"PESO COLOMBIANO\": 4052.01,     # Peso colombiano\n",
+        "    \"QUETZAL\": 7.68,       # Quetzal\n",
+        "    \"COLON SALVADOREÑO\": 8.67,       # Colón salvadoreño\n",
+        "    \"BOLIVAR VENEZOLANO\": 36.61,      # Bolívar venezolano\n",
+        "    \"PESO ARGENTINO\": 932.41,       # Peso argentino\n",
+        "    \"COLON COSTARRICENCE\": 518.70       # Colón costarricense\n",
+        "}\n",
+        "\n",
+        "def convertir_moneda(cantidad, de_moneda, a_moneda):\n",
+        "    de_moneda = de_moneda.upper()\n",
+        "    a_moneda = a_moneda.upper()\n",
+        "\n",
+        "    if de_moneda not in tasas_de_cambio or a_moneda not in tasas_de_cambio:\n",
+        "        raise ValueError(\"Moneda no soportada.\")\n",
+        "\n",
+        "    cantidad_en_usd = cantidad / tasas_de_cambio[de_moneda]\n",
+        "\n",
+        "    cantidad_convertida = cantidad_en_usd * tasas_de_cambio[a_moneda]\n",
+        "\n",
+        "    return cantidad_convertida\n",
+        "\n",
+        "def main():\n",
+        "    print(\"Conversor de Monedas\")\n",
+        "    print(\"Monedas disponibles: Dolar, Euro, Lempira, Peso Mexicano, Peso Colombiano, Quetzal, Colon Salvadoreño, Bolivar Venezolano, Peso Argentino, Colon Costarricence\")\n",
+        "\n",
+        "    try:\n",
+        "        cantidad = float(input(\"Introduce la cantidad de dinero: \"))\n",
+        "        de_moneda = input(\"Introduce la moneda de origen: \").upper()\n",
+        "        a_moneda = input(\"Introduce la moneda de destino: \").upper()\n",
+        "\n",
+        "        cantidad_convertida = convertir_moneda(cantidad, de_moneda, a_moneda)\n",
+        "        print(f\"{cantidad} {de_moneda} es igual a {cantidad_convertida:.2f} {a_moneda}\")\n",
+        "    except ValueError as e:\n",
+        "        print(f\"Error: {e}\")\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    main()\n"
+      ],
+      "metadata": {
+        "id": "8aOgyrujVLa0",
+        "outputId": "f3b82fac-29e1-4ec1-8b94-8fd5fff837d5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Conversor de Monedas\n",
+            "Monedas disponibles: Dolar, Euro, Lempira, Peso Mexicano, Peso Colombiano, Quetzal, Colon Salvadoreño, Bolivar Venezolano, Peso Argentino, Colon Costarricence\n",
+            "Introduce la cantidad de dinero: 1.00\n",
+            "Introduce la moneda de origen: Dolar\n",
+            "Introduce la moneda de destino: Euro\n",
+            "1.0 DOLAR es igual a 0.92 EURO\n"
+          ]
         }
       ]
     }
