Conversor de monedas (Lab 2, Computo 1)

--- a/fundamentos_de_phyton.ipynb
+++ b/fundamentos_de_phyton.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMiEvCt5mFkRuVG+ZK16T4D",
+      "authorship_tag": "ABX9TyOHOFfpA9r5BCxd1ioNN7Kd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1061,16 +1061,16 @@
       "cell_type": "code",
       "source": [
         "tasas_de_cambio = {\n",
-        "    \"DOLAR\": 1.0,        # Dólar estadounidense\n",
-        "    \"EURO\": 0.92,       # Euro\n",
-        "    \"LEMPIRA\": 24.53,      # Lempira\n",
-        "    \"PESO MEXICANO\": 19.18,      # Peso mexicano\n",
-        "    \"PESO COLOMBIANO\": 4052.01,     # Peso colombiano\n",
-        "    \"QUETZAL\": 7.68,       # Quetzal\n",
-        "    \"COLON SALVADOREÑO\": 8.67,       # Colón salvadoreño\n",
-        "    \"BOLIVAR VENEZOLANO\": 36.61,      # Bolívar venezolano\n",
-        "    \"PESO ARGENTINO\": 932.41,       # Peso argentino\n",
-        "    \"COLON COSTARRICENCE\": 518.70       # Colón costarricense\n",
+        "    \"DOLAR\": 1.0,\n",
+        "    \"EURO\": 0.92,\n",
+        "    \"LEMPIRA\": 24.53,\n",
+        "    \"PESO MEXICANO\": 19.18,\n",
+        "    \"PESO COLOMBIANO\": 4052.01,\n",
+        "    \"QUETZAL\": 7.68,\n",
+        "    \"COLON SALVADOREÑO\": 8.67,\n",
+        "    \"BOLIVAR VENEZOLANO\": 36.61,\n",
+        "    \"PESO ARGENTINO\": 932.41,\n",
+        "    \"COLON COSTARRICENCE\": 518.70\n",
         "}\n",
         "\n",
         "def convertir_moneda(cantidad, de_moneda, a_moneda):\n",
@@ -1104,11 +1104,11 @@
         "    main()\n"
       ],
       "metadata": {
-        "id": "8aOgyrujVLa0",
-        "outputId": "f3b82fac-29e1-4ec1-8b94-8fd5fff837d5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "8aOgyrujVLa0",
+        "outputId": "f3b82fac-29e1-4ec1-8b94-8fd5fff837d5"
       },
       "execution_count": 44,
       "outputs": [
