clase 12 de agosto

--- a/fundamentos_de_phyton.ipynb
+++ b/fundamentos_de_phyton.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP2BSi6fCi6Z0JDTQrWtpuO",
+      "authorship_tag": "ABX9TyPcrhpD8pufrAQE0XgcTs0U",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1084,7 +1084,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1155,7 +1155,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1207,7 +1207,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1296,7 +1296,7 @@
         "id": "8aOgyrujVLa0",
         "outputId": "920b59a4-95bb-446e-ba8f-8052b0c48bd4"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1372,7 +1372,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1446,7 +1446,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1523,7 +1523,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1598,7 +1598,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1664,8 +1664,7 @@
         "    print(e)\n",
         "\n",
         "if __name__ == \"__main__\":\n",
-        "  main()\n",
-        ""
+        "  main()\n"
       ],
       "metadata": {
         "id": "MDYSTWTrmZV5",
@@ -1674,7 +1673,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1751,7 +1750,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1834,7 +1833,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1846,6 +1845,147 @@
             "Introduce la unidad de origen: caja\n",
             "Introduce la unidad de destino: unidad\n",
             "3.0 caja son 3 unidad\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Clase virtual 12 de agosto"
+      ],
+      "metadata": {
+        "id": "KNs0bfRKgGlC"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "serie = [1,2,3,3,4,1,8,9]\n",
+        "print(serie.count(1))"
+      ],
+      "metadata": {
+        "id": "2jHVBzbagKh7",
+        "outputId": "620984c0-4886-4c12-bd9a-60130e7ad0bf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numeros = []\n",
+        "for i in range(1,10):\n",
+        "  numeros.append(int(input(\"Num: \"+str(i)+\": \")))\n",
+        "num = int(input(\"Num a buscar: \"))\n",
+        "print(\"Serie: \", numeros, \"El numero \", num, \" se repite \", numeros.count(num))"
+      ],
+      "metadata": {
+        "id": "JBaM40rJgWBo",
+        "outputId": "59afcc6f-2b5a-44eb-bf8b-9411e0dc1cc7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Num: 1: 5\n",
+            "Num: 2: 6\n",
+            "Num: 3: 5\n",
+            "Num: 4: 4\n",
+            "Num: 5: 3\n",
+            "Num: 6: 5\n",
+            "Num: 7: 4\n",
+            "Num: 8: 5\n",
+            "Num: 9: 3\n",
+            "Num a buscar: 5\n",
+            "Serie:  [5, 6, 5, 4, 3, 5, 4, 5, 3] El numero  5  se repite  4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numeros = [1,5,4,3,1,2]\n",
+        "numeros.sort()\n",
+        "numeros.reverse()\n",
+        "print(numeros)\n"
+      ],
+      "metadata": {
+        "id": "1J0PXBMcj0Gm",
+        "outputId": "8a8d4a25-f232-4f76-c66b-a8b690ee3862",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[5, 4, 3, 2, 1, 1]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Diccionarios - JSON"
+      ],
+      "metadata": {
+        "id": "-KGT1sT7kY6J"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "datos = {\n",
+        "    \"codigo\":\"USSS031223\",\n",
+        "    \"nombre\":\"Daniel Vargas\",\n",
+        "    \"materias\": [\n",
+        "        {\"codigo\":\"611\",\"nombre\":\"Programacion III\",\"notas\":{\n",
+        "            \"C1\":{\"LAB1\":8, \"LAB2\":9, \"Parcial\": 10},\n",
+        "            \"C2\":{\"LAB1\":10, \"LAB2\":9, \"Parcial\": 10},\n",
+        "            \"C3\":{\"LAB1\":4, \"LAB2\":5, \"Parcial\": 8}\n",
+        "            }\n",
+        "         },\n",
+        "        {\"codigo\":\"612\",\"nombre\":\"Estadistica Computacional\"}\n",
+        "    ]\n",
+        "}\n",
+        "print(datos[\"nombre\"], datos[\"materias\"][0][\"nombre\"], datos[\"materias\"][0][\"notas\"][\"C1\"])"
+      ],
+      "metadata": {
+        "id": "CYzgRhu7kbcx",
+        "outputId": "8f469c9d-b212-452a-c17f-ce6a3a5318b2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Daniel Vargas Programacion III {'LAB1': 8, 'LAB2': 9, 'Parcial': 10}\n"
           ]
         }
       ]
