--- a/fundamentos_de_phyton.ipynb
+++ b/fundamentos_de_phyton.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPcrhpD8pufrAQE0XgcTs0U",
+      "authorship_tag": "ABX9TyPWGaAOAvhmPAQsbhW10fmx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1871,7 +1871,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1898,7 +1898,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1934,7 +1934,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1979,13 +1979,229 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Daniel Vargas Programacion III {'LAB1': 8, 'LAB2': 9, 'Parcial': 10}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Clase presencial 14-08"
+      ],
+      "metadata": {
+        "id": "ToRw8kexTAWa"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "IF\n",
+        "Ejercicio: Solicitar al usuruario la edad y determinar su clasificacion"
+      ],
+      "metadata": {
+        "id": "H38zadC6TFvM"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "edad = int(input(\"edad: \"))\n",
+        "if edad>17:\n",
+        "  print(\"Bienvenido al mundo de la responsabilidad\")"
+      ],
+      "metadata": {
+        "id": "wbl6g0ZMTC8I",
+        "outputId": "4c50fb20-f2bf-488c-9e8d-4a1e641fce37",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "edad: 20\n",
+            "Bienvenido al mundo de la responsabilidad\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "edad = int(input(\"edad: \"))\n",
+        "if(edad<0):\n",
+        "  print(\"Error\")\n",
+        "elif edad<-2:\n",
+        "  print(\"Eres un bebe\")\n",
+        "elif edad<12:\n",
+        "  print(\"Eres un niño\")\n",
+        "elif edad<18:\n",
+        "  print(\"Eres un adolecente\")\n",
+        "elif edad<65:\n",
+        "  print(\"Eres un adulto\")\n",
+        "elif edad<85:\n",
+        "  print(\"Eres un adulto mayor\")\n",
+        "else:\n",
+        "  print(\"Larga vida\")"
+      ],
+      "metadata": {
+        "id": "kI02FOZQTVqZ",
+        "outputId": "4ed360fd-e1cc-40a9-e938-27afb0c2f3b6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "edad: 30\n",
+            "Eres un adulto\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num = int(input(\"Num: \"))\n",
+        "if num>0:\n",
+        "  print(\"Positivo\")\n",
+        "elif num<0:\n",
+        "  print(\"Negativo\")\n",
+        "else:\n",
+        "  print(\"Cero\")"
+      ],
+      "metadata": {
+        "id": "1Cj4p4lqTn-Q",
+        "outputId": "53138722-af7f-4364-80d6-70c7b9c6afc0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Num: 6\n",
+            "Positivo\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Ciclo while"
+      ],
+      "metadata": {
+        "id": "Ky3II3yJTunI"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "continuar = \"s\"\n",
+        "while continuar==\"s\":\n",
+        "  edad = int(input(\"edad: \"))\n",
+        "  if(edad<0):\n",
+        "     print(\"Error\")\n",
+        "  elif edad<-2:\n",
+        "     print(\"Eres un bebe\")\n",
+        "  elif edad<12:\n",
+        "     print(\"Eres un niño\")\n",
+        "  elif edad<18:\n",
+        "     print(\"Eres un adolecente\")\n",
+        "  elif edad<65:\n",
+        "     print(\"Eres un adulto\")\n",
+        "  elif edad<85:\n",
+        "     print(\"Eres un adulto mayor\")\n",
+        "  else:\n",
+        "     print(\"Larga vida\")\n",
+        "  continuar = input(\"Continuar s, sino cualquier tecla: \")"
+      ],
+      "metadata": {
+        "id": "DOH4JYRATwUn",
+        "outputId": "0b31bcd7-eaf3-4cfa-f940-3f56cc86f288",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "edad: 6\n",
+            "Eres un niño\n",
+            "Continuar s, sino cualquier tecla: s\n",
+            "edad: 12\n",
+            "Eres un adolecente\n",
+            "Continuar s, sino cualquier tecla: n\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Ciclo FOR\n"
+      ],
+      "metadata": {
+        "id": "0_mCTLehUC_7"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "continuar=\"s\"\n",
+        "while continuar==\"s\":\n",
+        "  tabla = int(input(\"Tabla: \"))\n",
+        "  for i in range(1,11):\n",
+        "    print(tabla, \"x\" ,i, \"=\" ,tabla*i)\n",
+        "  continuar = input(\"Continuar s, sino cualquier tecla: \")4\n",
+        ""
+      ],
+      "metadata": {
+        "id": "jXKBp0ygUEK8",
+        "outputId": "a7033190-df08-4dcf-c3bc-e72cfc4d86d9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Tabla: 7\n",
+            "7 x 1 = 7\n",
+            "7 x 2 = 14\n",
+            "7 x 3 = 21\n",
+            "7 x 4 = 28\n",
+            "7 x 5 = 35\n",
+            "7 x 6 = 42\n",
+            "7 x 7 = 49\n",
+            "7 x 8 = 56\n",
+            "7 x 9 = 63\n",
+            "7 x 10 = 70\n",
+            "Continuar s, sino cualquier tecla: S\n"
           ]
         }
       ]
