--- a/fundamentos_de_phyton.ipynb
+++ b/fundamentos_de_phyton.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPWGaAOAvhmPAQsbhW10fmx",
+      "authorship_tag": "ABX9TyMtvbKU3EIuu0OV3gCT5Bwb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2023,7 +2023,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2061,7 +2061,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2091,7 +2091,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2141,7 +2141,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -2174,8 +2174,7 @@
         "  tabla = int(input(\"Tabla: \"))\n",
         "  for i in range(1,11):\n",
         "    print(tabla, \"x\" ,i, \"=\" ,tabla*i)\n",
-        "  continuar = input(\"Continuar s, sino cualquier tecla: \")4\n",
-        ""
+        "  continuar = input(\"Continuar s, sino cualquier tecla: \")4\n"
       ],
       "metadata": {
         "id": "jXKBp0ygUEK8",
@@ -2184,7 +2183,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -2205,6 +2204,164 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Clase virtual 19-08**"
+      ],
+      "metadata": {
+        "id": "yrDOe_PhqPgh"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**PROGRAMACION ORIENTADA A OBJETOS**"
+      ],
+      "metadata": {
+        "id": "fjKicFSMqTpR"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- CLASE"
+      ],
+      "metadata": {
+        "id": "sqAJ7Mf7qXSD"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Calculadora:\n",
+        "  def sumar(self, num1, num2):\n",
+        "    return num1 + num2"
+      ],
+      "metadata": {
+        "id": "Xnv27uR9quu6"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Instanciar la clase calculadora, para crear el objeto a partir de la clase.\n",
+        "objCalculadora = Calculadora()\n",
+        "num1 = float(input(\"Num1: \"))\n",
+        "num2 = float(input(\"Num2: \"))\n",
+        "print(\"La suma es: \", objCalculadora.sumar(num1, num2))"
+      ],
+      "metadata": {
+        "id": "uAYPfs8Yq0A0",
+        "outputId": "f15e2f9a-6662-4cd3-e95f-658762c5cf94",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Num1: 6\n",
+            "Num2: 4\n",
+            "La suma es:  10.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        " **EJERCICIO: Escriba un programa que lea una serie de numeros introducidos por el usuario y determine la media aritmetica**"
+      ],
+      "metadata": {
+        "id": "WOAWl2W4rQjl"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from math import sqrt\n",
+        "class estadistica:\n",
+        "  def media(self, serie):\n",
+        "    suma = 0\n",
+        "    for num in serie:\n",
+        "      suma += num\n",
+        "    return suma/len(serie)\n",
+        "\n",
+        "  def tipica(self, serie):\n",
+        "    media = self.media(serie)\n",
+        "    suma = 0\n",
+        "    for num in serie:\n",
+        "      suma += (num-media)**2\n",
+        "    return sqrt(suma/len(serie))\n",
+        ""
+      ],
+      "metadata": {
+        "id": "npSF3__OsdO8"
+      },
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n = int(input(\"Cuantos numeros va a ingresar: \"))\n",
+        "serie = []\n",
+        "for num in range(1,n+1):\n",
+        "  serie.append(int(input(\"Num: \")))\n",
+        "\n",
+        "objEstadistica = estadistica()\n",
+        "print(\"La media es: \", objEstadistica.media(serie))\n",
+        "\n",
+        "print(\"La desviacion tipica es: \", objEstadistica.tipica(serie))"
+      ],
+      "metadata": {
+        "id": "0-0I0ZkirgHZ",
+        "outputId": "f272a842-940e-4d14-fe46-c9a182e9cece",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cuantos numeros va a ingresar: 5\n",
+            "Num: 1\n",
+            "Num: 2\n",
+            "Num: 3\n",
+            "Num: 4\n",
+            "Num: 5\n",
+            "La media es:  3.0\n",
+            "La desviacion tipica es:  1.4142135623730951\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "TAREA:\n",
+        "\n",
+        "*   Encontrar de una serie de numeros introducidos por el usuario la varianza\n",
+        "*   Encontrar de una serie de numeros introducidos por el usuario la frecuencia\n",
+        "*   Escriba un programa que determine si una palabra introducida por el usuario es palindrome Ejem: Ana, Oso, Oro\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "H63Lhh-CxDHj"
+      }
     }
   ]
 }
